--- a/DreamCareer/DreamCareer.csproj
+++ b/DreamCareer/DreamCareer.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
+    <Content Include="scripts\CreateProfile.js" />
     <Content Include="scripts\CreateUser.js" />
     <Content Include="scripts\jquery-2.2.3.min.js" />
     <Content Include="static\css\base.css" />
