--- a/DreamCareer/DreamCareer.csproj
+++ b/DreamCareer/DreamCareer.csproj
@@ -120,6 +120,7 @@
     <Content Include="scripts\Login.js" />
     <Content Include="scripts\CreateUser.js" />
     <Content Include="scripts\jquery-2.2.3.min.js" />
+    <Content Include="SearchResults.aspx" />
     <Content Include="static\css\base.css" />
     <Content Include="static\css\Create Profile.css" />
     <Content Include="static\css\CreateUser.css" />
@@ -176,6 +177,13 @@
     <Compile Include="PageRank.cs" />
     <Compile Include="PopulateDatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchResults.aspx.cs">
+      <DependentUpon>SearchResults.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SearchResults.aspx.designer.cs">
+      <DependentUpon>SearchResults.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ViewProfile.aspx.cs">
       <DependentUpon>ViewProfile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
