--- a/DreamCareer/DreamCareer.csproj
+++ b/DreamCareer/DreamCareer.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin.aspx" />
+    <Content Include="CreateCompany.aspx" />
     <Content Include="Profile.aspx" />
     <Content Include="CreateProfile.aspx" />
     <Content Include="CreateUser.aspx" />
@@ -124,6 +125,7 @@
     <Content Include="scripts\jquery-2.2.3.min.js" />
     <Content Include="SearchResults.aspx" />
     <Content Include="static\css\base.css" />
+    <Content Include="static\css\CreateCompany.css" />
     <Content Include="static\css\Profile.css" />
     <Content Include="static\css\Create Profile.css" />
     <Content Include="static\css\CreateUser.css" />
@@ -147,6 +149,13 @@
     </Compile>
     <Compile Include="base.Master.designer.cs">
       <DependentUpon>base.Master</DependentUpon>
+    </Compile>
+    <Compile Include="CreateCompany.aspx.cs">
+      <DependentUpon>CreateCompany.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateCompany.aspx.designer.cs">
+      <DependentUpon>CreateCompany.aspx</DependentUpon>
     </Compile>
     <Compile Include="Profile.aspx.cs">
       <DependentUpon>Profile.aspx</DependentUpon>
