--- a/DreamCareer/DreamCareer.csproj
+++ b/DreamCareer/DreamCareer.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -120,6 +121,7 @@
     <Content Include="Position.css" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
+    <Content Include="scripts\CreateCompany.js" />
     <Content Include="scripts\CreateProfile.js" />
     <Content Include="scripts\Login.js" />
     <Content Include="scripts\CreateUser.js" />
