--- a/DreamCareer/Web.config
+++ b/DreamCareer/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
-    <httpRuntime targetFramework="4.5.2"/>
+    <httpRuntime requestValidationMode="2.0" targetFramework="4.5.2"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
@@ -30,3 +30,4 @@
     </modules>
   </system.webServer>
 </configuration>
+
